# gtk4-example

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  gtk4-example.c
